# agent-papercuts

./: AGENTS.md  Cargo.toml  README.md  SOURCE.md  flake.nix
.agents/skills/agent-papercut/: SKILL.md
.agents/skills/log-papercut/: SKILL.md
.agents/skills/log-papercuts/: SKILL.md
.agents/skills/log-papercuts/agents/: openai.yaml
.claude/skills/: agent-papercut
.github/workflows/: clippy.yml
docs/: SOURCE.md
src/: helper.rs  lib.rs  main.rs
tests/: papercut.rs
